--- a/src/app/barra-Navegacion/barra-Navegacion.component.html
+++ b/src/app/barra-Navegacion/barra-Navegacion.component.html
@@ -1,6 +1,6 @@
 <div class="navbarColor">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand transition" routerLink="VioletCompany/listado">
+    <a class="navbar-brand transition" routerLink="/listado">
       Servicios
     </a>
 
@@ -26,7 +26,7 @@
         </li>
 
         <li class="nav-item acceso transition" id="acceso" *ngIf="miToken == 0">
-          <a class="nav-link text-light" routerLink="VioletCompany//registro">Regístrate</a>
+          <a class="nav-link text-light" routerLink="VioletCompany/registro">Regístrate</a>
         </li>
 
 
